CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(NeoDun)

SET(CMAKE_COLOR_MAKEFILE ON)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(SDL REQUIRED sdl2)

INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIRS})
LINK_DIRECTORIES(${SDL_LIBRARY_DIRS})

ADD_EXECUTABLE(game.bin entry.cpp canvas.cpp game.cpp system.cpp sprite.cpp)
TARGET_LINK_LIBRARIES(game.bin ${SDL_LIBRARIES})
TARGET_LINK_LIBRARIES(game.bin SDL2_image)
